# greppy

./: .gitignore  .semgrepignore  Cargo.toml  IDEAS.md  LICENSE  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_README.md  OPTIMIZATION_SESSION_2026-01-09.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_RESULTS.md  PRD.md  PROGRESS_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_v0.3.0_COMPLETE.md  SPRINTPLAN.md  THROUGHPUT_OPTIMIZATION_COMPLETE.md  build.rs  dhat-heap.json  install.ps1  install.sh  load-test.json  unicodelogo.md
.github/workflows/: ci.yml  performance.yml  release.yml
benches/: cache_bench.rs  index_bench.rs  search_bench.rs  throughput_bench.rs
docs/: ROADMAP.md
docs/0.4.0/: ENHANCEMENT_PLAN.md
docs/0.5.0/: PLAN.md
release-assets/: checksums.txt  greppy.1
scripts/: profile.sh  quick-bench.sh  quick-validate.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
src/ai/: claude.rs  embedding.rs  gemini.rs  mod.rs  ollama.rs  trace_prompts.rs
src/auth/: anthropic.rs  google.rs  mod.rs  oauth.rs  server.rs  storage.rs
src/cache/: lru.rs  mod.rs  query_cache.rs
src/cli/: ask.rs  daemon.rs  forget.rs  index.rs  list.rs  login.rs  logout.rs  mod.rs  model.rs  read.rs  search.rs  trace.rs  web.rs
src/core/: config.rs  error.rs  mod.rs  project.rs
src/daemon/: cache.rs  client.rs  events.rs  mod.rs  process.rs  protocol.rs  server.rs  watcher.rs
src/index/: mod.rs  reader.rs  schema.rs  tantivy_index.rs  writer.rs
src/llm/: cache.rs  client.rs  local.rs  mod.rs  query.rs  warmup.rs
src/output/: human.rs  json.rs  mod.rs
src/parse/: ast.rs  chunker.rs  factory.rs  languages.rs  mod.rs  parser.rs  treesitter.rs  walker.rs
src/parse/languages/: mod.rs
src/project/: detect.rs  mod.rs  registry.rs
src/search/: mod.rs  query.rs  ranking.rs  results.rs
src/trace/: builder.rs  context.rs  index.rs  mod.rs  snapshots.rs  storage.rs  traverse.rs  types.rs
src/trace/extract/: mod.rs  regex.rs  treesitter.rs
src/trace/output/: ascii.rs  json.rs  mod.rs  plain.rs
src/watch/: mod.rs
src/web/: events.rs  mod.rs  projects.rs  server.rs  settings.rs
src/web/static/: api.js  app.js  index.html  style.css  utils.js
src/web/static/components/: cycles.js  detail.js  dropdown.js  empty.js  error.js  export.js  search.js  settings.js  skeleton.js  sse.js
src/web/static/lib/: persistence.js
src/web/static/views/: cycles.js  graph.js  list.js  stats.js  tables.js  timeline.js  tree.js
