[package]
name = "greppy"
version = "0.7.0"
edition = "2021"
authors = ["Greppy Contributors"]
description = "Sub-millisecond local semantic code search"
license = "MIT"
repository = "https://github.com/greppy/greppy"
readme = "README.md"
keywords = ["search", "code", "semantic", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Search engine
tantivy = "0.25"

# Async runtime
tokio = { version = "1", features = ["full", "net", "sync", "io-util", "fs", "signal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File system
notify = "6"
ignore = "0.4"
walkdir = "2"

# Utilities
thiserror = "1"
anyhow = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }
lru = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"

# Auth & Network
oauth2 = "4.4"
keyring = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
open = "5"
url = "2"
rand = "0.8"

# AI & Embeddings
fastembed = "4"
crossbeam-channel = "0.5"
regex = "1.12.2"

# Parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
libc = "0.2.180"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "greppy"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
