[package]
name = "greppy-cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["KBLCode <hello@kblcode.com>"]
description = "Sub-millisecond semantic code search with AI reranking (Claude/Gemini)"
license = "MIT"
repository = "https://github.com/KBLCode/greppy"
homepage = "https://github.com/KBLCode/greppy"
documentation = "https://github.com/KBLCode/greppy#readme"
readme = "README.md"
keywords = ["search", "code", "semantic", "cli", "ai"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [
    ".github/",
    ".gitignore",
    "docs/",
    "benches/",
    "tests/",
    "*.gif",
    "*.md",
    "!README.md",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Search engine
tantivy = "0.25"

# Async runtime
tokio = { version = "1", features = ["full", "net", "sync", "io-util", "fs", "signal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File system
notify = "6"
ignore = "0.4"
walkdir = "2"

# Parallel processing (memory-safe, no large allocations)
rayon = "1.10"

# Utilities
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }
lru = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"

# Auth & Network
oauth2 = "4.4"
keyring = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
open = "5"
url = "2"
rand = "0.8"

# Interactive CLI
dialoguer = "0.11"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "greppy"
path = "src/lib.rs"

[[bin]]
name = "greppy"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
